<resources>
    <string name="app_name">乡缀</string>
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="community">社区</string>
    <string name="mine">我的</string>
    <string name="community_content1">2020年1月31日0-24时，浙江省报告新型冠状病毒感染的肺炎新增确诊病例62例，新增出院病例6例。其中：
新增确诊病例中，杭州市13例、宁波市9例、温州市14例、嘉兴市2例、绍兴市1例、金华市7例、衢州市1例、台州市14例、丽水市1例；新增出院病例中，宁波市1例、温州市1例、金华市3例、台州市1例。
截至1月31日24时，浙江省累计报告新型冠状病毒感染的肺炎确诊病例599例，现有重症病例51例（其中危重10例），累计出院15例。其中：
确诊病例中，杭州市98例、宁波市55例、温州市241例、湖州市6例、嘉兴市18例、绍兴市24例、金华市34例、衢州市13例、舟山市7例、台州市95例、丽水市8例；重症病例中，杭州市9例、宁波市1例、温州市18例、嘉兴市2例、绍兴市5例、金华市5例、衢州市3例、台州市6例、丽水市2例；出院病例中，宁波市1例、温州市8例、金华市3例、舟山市1例、台州市1例、丽水市1例。</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ar_ruler">AR尺子</string>
    <string name="text_mural_theme">壁画主题</string>
    <string name="text_article_type">文章类型</string>
    <string name="text_picture_type">图片类型</string>
    <string name="text_wall_size">墙体尺寸</string>
    <string name="text_Theme_hint">请输入主题，如：“中国梦”</string>
    <string name="text_length">长：</string>
    <string name="text_width">宽：</string>
    <string name="text_seekBar">如果你知道更精确的施工尺寸，拖动此处进行微调</string>
    <string name="text_commit">提交</string>
    <string name="text_location">你的位置</string>
    <string name="hangzhou">浙江省 杭州市 江干区</string>
    <string name="text_remind">您预约的时间是：2020 年 4 月 30 日
        \n\n当天降雨的概率：90 %，
        \n\n建议：不适合室外绘图，请更改日期</string>

    <string name="recommend">推荐</string>
    <string name="poverty_alleviation">脱贫攻坚</string>
    <string name="rural_civilization">文明乡风</string>
    <string name="filial_piety">孝老爱亲</string>
    <string name="new_trends">树新风</string>
    <string name="rate">评分</string>
    <string name="mural_content">mural</string>

    <string name="china_dream">中国梦</string>
    <string name="the_true">真善美</string>
    <string name="civilize_village">文明乡村</string>
    <string name="national_unity">民族团结</string>
    <string name="remain_true">不忘初心</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="text_us">我们</string>
    <string name="text_tools">工具</string>

    <string name="no_design">您还没有设计过壁画哟\n快点击设计按钮设计你的第一幅壁画吧</string>
    <string name="no_collection">您还没有收藏过壁画哟\n快点击收藏按钮收藏你喜欢的壁画吧</string>
    <string name="no_meeting">今日没有会议</string>
    <string name="add_meeting">添加提醒</string>
    <string name="mural_theme">壁画主题：</string>
    <string name="mural_size">壁画尺寸：</string>
    <string name="mural_larger">壁画大图</string>
    <string name="mural_detail">壁画详情：</string>
    <string name="mural_class">壁画类型：</string>
    <string name="mural_score">壁画评分：</string>
    <string name="please_wait">正在为您生成壁画，请稍后...</string>

    <string name="news1">二十国集团（G20）召开农业部长临时电视电话会议，估计将主要讨论确保粮食安全问题。此举能否牵制过度奉行“本国优先”的倾向将引人关注。
由于新冠肺炎疫情蔓延，全球粮食供应体制也很可能受到影响。日本农林水产省说，截至16日已至少有14个国家实施农产品与食品出口限制。实施农产品与食品出口限制的国家有俄罗斯、乌克兰、土耳其、越南、柬埔寨等国。俄罗斯是世界上最大的小麦出口国，但对4至6月的粮食出口设定了700万吨的配额，这低于1至3月的实际出口量即720万吨。乌克兰也开始限制小麦、荞麦出口，越南则限制大米出口。
据日本农林水产省称，日本国内消费的小麦，88%依靠进口，玉米几乎全部依赖进口，92%的大豆也依赖进口。不过，从进口对象看，小麦几乎都从美国、加拿大、澳大利亚进口，进口量占全部进口量的98%，从俄罗斯的进口量只占1%。玉米、大豆也多半从美国、巴西等国进口。农林水产省官员表示，“目前日本的粮食进口还没有出现问题”。日本国内对这些粮食也有储备。</string>
    <string name="news2">夏收粮油长势较好，春播进展顺利。组织开展“奋战100天夺夏粮丰收行动”，及早做好小麦条锈病、赤霉病防控，加强肥水调控，着力打牢夏粮丰收基础。今年小麦面积基本稳定，目前多处于孕穗抽穗期，长势好于去年和常年。今年早籼稻和中晚籼稻最低收购价每斤提高1分钱，财政加大对双季稻主产区的支持力度，调动了早稻种植积极性。目前早稻育秧基本结束，大田播栽过七成，预计有望遏制连续7年面积下滑的势头。抢抓农时做好春耕备耕，加快推进化肥、农药、种子等农资生产企业复工复产，打通农资下乡、农机上路、农民下田等堵点。据农业农村部农情调度，春播粮食种植意向面积稳定</string>
    <string name="news3">生猪生产持续恢复，家禽、水产生产形势明显好转。在政策激励和市场拉动的双重作用下，生猪生产延续去年10月份以来持续恢复向好态势。据国家统计局统计，一季度末生猪存栏32120万头，比去年四季度末增长了3.5%，其中能繁母猪存栏3381万头，增长了9.8%。受前期产能下降较多影响，猪肉产量同比下降，由于消费也有所下降，猪肉供需偏紧态势有所缓解、价格回落。活禽及产品压栏、压库等问题得到有效解决，家禽产销秩序基本恢复，禽蛋产量同比增长4.3%。重大动物疫情保持平稳，个别新发生的非洲猪瘟、禽流感疫情均得到及时处置，未出现扩散。水产品生产加快恢复，长江流域以南地区投苗面积达5500多万亩，渔船出海捕捞作业数量基本达到往年同期水平。</string>
    <string name="news4">粮油价格保持稳定，“菜篮子”产品价格逐步回落。粮油及成品市场供应充足，价格保持稳定。据农业农村部300个价格网点县监测，3月份稻谷、小麦和玉米三种粮食集贸市场月均价每百斤120.77元，同比基本持平。肉蛋、蔬菜、水果等农副产品供应增加，价格总体回落。3月猪肉价格环比下降6.9%，4月上旬猪肉集贸市场均价每公斤53.84元，已连续7周下降，降幅累计达到9%；主产省份鸡蛋均价每公斤6.77元，同比下降8.3%；28种蔬菜和6种水果批发市场均价分别为每公斤4.49元和5.88元，同比分别下降3%和3.8%。一季度农产品质量安全例行监测总体合格率保持在97%以上。粮油和“菜篮子”产品持续保障有力，百姓米面无忧、副食充足。</string>
    <string name="news5">涉农企业加快复工复产，生产经营秩序基本恢复。针对涉农企业遇到的运销受阻、资金紧张等难题，及时推动将饲料、农资、养殖、屠宰加工和水产品加工等骨干企业纳入疫情防控重点保障企业名单，向企业提供专项再贷款、优惠再贷款、延期还本付息等政策支持，助力加快复工复产。目前全国涉农企业生产经营基本恢复正常，饲料兽药企业复工率达到90%以上，生猪屠宰企业复工率达到90%，水产品加工企业复工率达到95%以上，农资重点企业复工率达到98%，整体产能已接近常年同期水平。乡村休闲旅游业逐渐复苏，田园观光、农事体验等户外项目复产复业率超过六成。外出农民工加快返岗复工，2月末，外出务工农村劳动力总量12251万人。</string>
    <string name="news6">农村投资消费降幅收窄，大豆等农产品进口明显增加。3月份以来农业投资项目加快开复工，去年国家投资的农业建设项目总体复工率接近9成，农业投资回暖。一季度第一产业固定资产投资（不含农户）1643亿元，同比下降13.8%，降幅较1—2月收窄11.8个百分点。随着疫情得到有效控制，乡村消费潜力逐步释放，3月份乡村消费品零售额3476亿元，同比下降15.1%，降幅较1—2月收窄3.9个百分点。大豆、猪肉等农产品进口继续增长，一季度大豆进口1779.2万吨，同比增加6.2%；猪肉进口95.1万吨，增加1.7倍；牛肉进口51.3万吨，同比增加64.9%，有效补充了国内供给。</string>
    <string name="news7">统筹抓好农业农村改革发展，各项工作稳中有进。抓好重点改革任务落实，指导试点地区制定第二轮土地承包到期后再延长30年试点工作方案，全面推开农村集体产权制度改革试点，实施新型农业经营主体和服务主体高质量发展规划，持续推进垦区集团化农场企业化改革和办社会职能改革。在82个国家农业绿色发展先行区试点县，推进农业绿色发展支撑体系建设。以疫情防治为切入点，深入开展农村人居环境整治，加强农村厕所管护，开展村庄清洁行动，巩固提升“三清一改”成果。加强乡风文明建设，引导农民群众养成健康文明生活方式，加强疫情期间农村矛盾纠纷化解，维护农村社会稳定。</string>
    <string name="news8">农业农村部有关负责人介绍，一季度农业农村经济运行总体平稳，有效发挥了“三农”“压舱石”重要作用。但也要看到，小麦条锈病等病虫害偏重发生，新冠肺炎疫情对农民收入影响较大，国际上疫情扩散蔓延导致农产品进出口的不确定性增加，需要采取有力措施加以应对。下一步，农业农村部将坚决贯彻落实党中央、国务院决策部署，统筹抓好新冠肺炎疫情防控和“三农”重点工作，突出保供给、保增收、保小康，抓好春管春播，确保夏粮丰收，为实现全年粮食目标奠定基础；统筹抓好猪肉等鲜活农产品生产，保障“菜篮子”产品供应；大力发展富民乡村产业，多措并举促进农民增收；加强重大项目建设，稳定农业农村投资；有效应对全球新冠肺炎疫情影响，着力稳定农产品贸易；巩固产业扶贫成果，提升产业带贫能力。全力以赴做好农业农村各项工作，努力把疫情对农业农村经济造成的损失降到最低，为实现全面建成小康社会、决战决胜脱贫攻坚提供有力支撑</string>

    <string name="picture_class">图片类型：</string>
    <string name="article_class">文章类型：</string>
    <string name="start_draw">开始绘制</string>
</resources>
