<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DesignFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/text_mural_theme"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTheme"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/text_Theme_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/articleList"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:entries="@array/article_type"
            app:layout_constraintEnd_toEndOf="@+id/inputTheme"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/inputTheme"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_article_type"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/inputTheme" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_picture_type"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/articleList" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/pictureList"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:entries="@array/picture_type"
            app:layout_constraintEnd_toEndOf="@+id/articleList"
            app:layout_constraintStart_toStartOf="@+id/articleList"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_wall_size"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/pictureList" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_length"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/tvLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="2.51 m"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_width"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/tvWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.52 m"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/tvLength"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarLength"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:progress="60"
            app:layout_constraintBottom_toBottomOf="@+id/tvLength"
            app:layout_constraintEnd_toEndOf="@+id/pictureList"
            app:layout_constraintTop_toTopOf="@+id/tvLength" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarWidth"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:progress="30"
            app:layout_constraintBottom_toBottomOf="@+id/tvWidth"
            app:layout_constraintStart_toStartOf="@+id/seekBarLength"
            app:layout_constraintTop_toTopOf="@+id/tvWidth" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_seekBar"
            app:layout_constraintEnd_toEndOf="@+id/pictureList"
            app:layout_constraintTop_toBottomOf="@+id/seekBarWidth" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_backgroud_commit"
            android:text="@string/text_commit"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/inputTheme"
            app:layout_constraintStart_toStartOf="@+id/inputTheme"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
